scripts/nullness/wpi/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8.txt
../original/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8/src/rummyj/visitors/OptimizationVisitor.java:88: error: (dereference.of.nullable) $$ 1 $$ oldString $$ ( 1370, 1379 ) $$ dereference of possibly-null reference oldString
    while (i < oldString.length())
               ^
../original/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8/src/rummyj/visitors/InterpreterVisitor.java:30: error: (accessing.nullable) $$ 1 $$ array $$ ( 528, 533 ) $$ accessing a possibly-null array array
    array[pointer]++;
    ^
../original/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8/src/rummyj/visitors/InterpreterVisitor.java:35: error: (accessing.nullable) $$ 1 $$ array $$ ( 592, 597 ) $$ accessing a possibly-null array array
    array[pointer]--;
    ^
../original/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8/src/rummyj/visitors/InterpreterVisitor.java:42: error: (accessing.nullable) $$ 1 $$ array $$ ( 668, 673 ) $$ accessing a possibly-null array array
      array[pointer] = (byte) System.in.read();
      ^
../original/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8/src/rummyj/visitors/InterpreterVisitor.java:52: error: (accessing.nullable) $$ 1 $$ array $$ ( 848, 853 ) $$ accessing a possibly-null array array
    System.out.print((char) array[pointer]);
                            ^
../original/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8/src/rummyj/visitors/InterpreterVisitor.java:57: error: (accessing.nullable) $$ 1 $$ array $$ ( 913, 918 ) $$ accessing a possibly-null array array
    while (array[pointer] != 0)
           ^
../original/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8/src/rummyj/visitors/InterpreterVisitor.java:75: error: (accessing.nullable) $$ 1 $$ array $$ ( 1236, 1241 ) $$ accessing a possibly-null array array
      array[pointer] = (byte) n.character.charAt(i);
      ^
../original/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8/src/rummyj/visitors/InterpreterVisitor.java:77: error: (accessing.nullable) $$ 1 $$ array $$ ( 1306, 1311 ) $$ accessing a possibly-null array array
      array[pointer] = 0;
      ^
../original/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8/src/rummyj/visitors/InterpreterVisitor.java:83: error: (dereference.of.nullable) $$ 1 $$ procedures $$ ( 1378, 1388 ) $$ dereference of possibly-null reference procedures
    procedures.put(Byte.parseByte("" + (array[pointer])), n);
    ^
../original/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8/src/rummyj/visitors/InterpreterVisitor.java:83: error: (accessing.nullable) $$ 1 $$ array $$ ( 1414, 1419 ) $$ accessing a possibly-null array array
    procedures.put(Byte.parseByte("" + (array[pointer])), n);
                                        ^
../original/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8/src/rummyj/visitors/InterpreterVisitor.java:88: error: (dereference.of.nullable) $$ 1 $$ procedures $$ ( 1508, 1518 ) $$ dereference of possibly-null reference procedures
    Procedure procedure = procedures.get(Byte.parseByte("" + array[pointer]));
                          ^
../original/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8/src/rummyj/visitors/InterpreterVisitor.java:88: error: (accessing.nullable) $$ 1 $$ array $$ ( 1543, 1548 ) $$ accessing a possibly-null array array
    Procedure procedure = procedures.get(Byte.parseByte("" + array[pointer]));
                                                             ^
../original/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8/src/rummyj/visitors/AnimationVisitor.java:51: error: (accessing.nullable) $$ 1 $$ array $$ ( 1151, 1156 ) $$ accessing a possibly-null array array
    array[pointer]++;
    ^
../original/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8/src/rummyj/visitors/AnimationVisitor.java:57: error: (accessing.nullable) $$ 1 $$ array $$ ( 1238, 1243 ) $$ accessing a possibly-null array array
    array[pointer]--;
    ^
../original/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8/src/rummyj/visitors/AnimationVisitor.java:65: error: (accessing.nullable) $$ 1 $$ array $$ ( 1337, 1342 ) $$ accessing a possibly-null array array
      array[pointer] = (byte) System.in.read();
      ^
../original/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8/src/rummyj/visitors/AnimationVisitor.java:76: error: (accessing.nullable) $$ 1 $$ array $$ ( 1540, 1545 ) $$ accessing a possibly-null array array
    System.out.print((char) array[pointer]);
                            ^
../original/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8/src/rummyj/visitors/AnimationVisitor.java:82: error: (accessing.nullable) $$ 1 $$ array $$ ( 1628, 1633 ) $$ accessing a possibly-null array array
    while (array[pointer] != 0)
           ^
../original/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8/src/rummyj/visitors/AnimationVisitor.java:102: error: (accessing.nullable) $$ 1 $$ array $$ ( 1989, 1994 ) $$ accessing a possibly-null array array
      array[pointer] = (byte) n.character.charAt(i);
      ^
../original/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8/src/rummyj/visitors/AnimationVisitor.java:104: error: (accessing.nullable) $$ 1 $$ array $$ ( 2059, 2064 ) $$ accessing a possibly-null array array
      array[pointer] = 0;
      ^
../original/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8/src/rummyj/visitors/AnimationVisitor.java:111: error: (dereference.of.nullable) $$ 1 $$ procedures $$ ( 2156, 2166 ) $$ dereference of possibly-null reference procedures
    procedures.put(Byte.parseByte("" + (array[pointer])), n);
    ^
../original/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8/src/rummyj/visitors/AnimationVisitor.java:111: error: (accessing.nullable) $$ 1 $$ array $$ ( 2192, 2197 ) $$ accessing a possibly-null array array
    procedures.put(Byte.parseByte("" + (array[pointer])), n);
                                        ^
../original/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8/src/rummyj/visitors/AnimationVisitor.java:117: error: (dereference.of.nullable) $$ 1 $$ procedures $$ ( 2309, 2319 ) $$ dereference of possibly-null reference procedures
    Procedure procedure = procedures.get(Byte.parseByte("" + array[pointer]));
                          ^
../original/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8/src/rummyj/visitors/AnimationVisitor.java:117: error: (accessing.nullable) $$ 1 $$ array $$ ( 2344, 2349 ) $$ accessing a possibly-null array array
    Procedure procedure = procedures.get(Byte.parseByte("" + array[pointer]));
                                                             ^
../original/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8/src/rummyj/visitors/AnimationVisitor.java:138: error: (argument) $$ 4 $$ mgr $$ Container.setLayout $$ @UnderInitialization(javax.swing.BoxLayout.class) @NonNull BoxLayout $$ @Initialized @Nullable LayoutManager $$ ( 2736, 2773 ) $$ incompatible argument for parameter mgr of Container.setLayout.
    setLayout(new BoxLayout(this, BoxLayout.Y_AXIS));
              ^
  found   : @UnderInitialization(javax.swing.BoxLayout.class) @NonNull BoxLayout
  required: @Initialized @Nullable LayoutManager
../original/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8/src/rummyj/visitors/AnimationVisitor.java:138: error: (argument) $$ 4 $$ target $$ BoxLayout constructor $$ @UnderInitialization(javax.swing.JPanel.class) @NonNull AnimationVisitor $$ @Initialized @NonNull Container $$ ( 2750, 2754 ) $$ incompatible argument for parameter target of BoxLayout constructor.
    setLayout(new BoxLayout(this, BoxLayout.Y_AXIS));
                            ^
  found   : @UnderInitialization(javax.swing.JPanel.class) @NonNull AnimationVisitor
  required: @Initialized @NonNull Container
../original/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8/src/rummyj/visitors/AnimationVisitor.java:172: error: (method.invocation) $$ 3 $$ setValueAt(java.lang.Object,int,int) $$ @Initialized @NonNull AnimationVisitor.@UnderInitialization(rummyj.visitors.AnimationVisitor.TableModel.class) @NonNull TableModel $$ @Initialized @NonNull AnimationVisitor.@Initialized @NonNull TableModel $$ ( 3682, 3703 ) $$ call to setValueAt(java.lang.Object,int,int) not allowed on the given receiver.
          setValueAt("0", i, j);
                    ^
  found   : @Initialized @NonNull AnimationVisitor.@UnderInitialization(rummyj.visitors.AnimationVisitor.TableModel.class) @NonNull TableModel
  required: @Initialized @NonNull AnimationVisitor.@Initialized @NonNull TableModel
../original/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8/src/rummyj/visitors/AnimationVisitor.java:237: error: (accessing.nullable) $$ 1 $$ array $$ ( 4840, 4845 ) $$ accessing a possibly-null array array
    table.getModel().setValueAt(array[pointer], i, j);
                                ^
../original/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8/src/rummyj/FilePrinter.java:46: error: (dereference.of.nullable) $$ 1 $$ outBuffer $$ ( 818, 827 ) $$ dereference of possibly-null reference outBuffer
        outBuffer.write("\t");
        ^
../original/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8/src/rummyj/FilePrinter.java:48: error: (dereference.of.nullable) $$ 1 $$ outBuffer $$ ( 855, 864 ) $$ dereference of possibly-null reference outBuffer
      outBuffer.write(line);
      ^
../original/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8/src/rummyj/FilePrinter.java:80: error: (dereference.of.nullable) $$ 1 $$ outBuffer $$ ( 1317, 1326 ) $$ dereference of possibly-null reference outBuffer
      outBuffer.close();
      ^
30 errors
